<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="resume">Продолжить</string>
    <string name="rate">Оценить</string>
    <string name="do_not_close_or_minimize_the_application">Не закрывайте и не сворачивайте приложение, пока идет устранение угроз…\n\nНам нужно еще пару секунд…</string>
    <string name="inorder_to_optimize_your_device">Для того, чтобы оптимизировать ваш девайс нам потребуется пройти несколько шагов*</string>
    <string name="this_is_a_one_time_operation">*Это единоразовая операция, в дальнейшем оптимизация будет занимать меньше времени</string>
    <string name="have_you_noticed_that_over_time_the_device">А вы замечали, что со временем устройство начинает заметно медленее работать?</string>
    <string name="we_will_identify_all_the_errors_of_your_device">Мы выявим все ошибки вашего устройства, которые влияют на его работу и постараемся их устранить вместе с вами </string>
    <string name="rate_our_app">Оцените наше приложение</string>
    <string name="we_are_improving_our_product_every_day">Мы совершенствуем свой продукт каждый день и очень надеемся, что он вам понравится.</string>
    <string name="initial_assessment_of_the_device_condition">Первичная оценка состояния девайса</string>
    <string name="lets_check_the_status_of_your_phone">Давайте проверим состояние вашего телефона</string>
    <string name="start_evaluation">Начать оценку</string>
    <string name="do_not_close_or_minimize_the_application_while_it_is_being_checked">Не закрывайте и не сворачивайте приложение, пока идет проверка на угрозы для вашего телефона\n\nНам нужно еще пару секунд…</string>
    <string name="device_information">Информация об устройстве</string>
    <string name="before_the_automatic_transition_to_the_next_step">До автоматического перехода на следующий шаг</string>
    <string name="model_device">Модель</string>
    <string name="android_version">Android</string>
    <string name="time_work">Время работы</string>
    <string name="card_version">Плата</string>
    <string name="display_size">Дисплей</string>
    <string name="screen_size">Разрешение</string>
    <string name="density_px">Плотность</string>
    <string name="battery_charge_percent">Уровень заряда</string>
    <string name="temperature_battery">Температура</string>
    <string name="optimization_required">Требуется оптимизация</string>
    <string name="after_checking_your_phone_we_found_something_that_needs_attention">После проверки вашего телефона, мы нашли то, что требует внимания</string>
    <string name="lets_do_the_first_optimization">Давайте проведем первую оптимизацию</string>
    <string name="start_optimization">Начать оптимизацию</string>
    <string name="do_not_close_or_minimize_the_application_while_going_optimized">Не закрывайте и не сворачивайте приложение, пока идет оптимизация\n\nНам нужно еще пару секунд…</string>
</resources>