<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/Text.Header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/initial_assessment_of_the_device_condition"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_robot"
        app:layout_constraintBottom_toTopOf="@id/second_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/second_description"
        style="@style/Text.Body_1.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:text="@string/lets_check_the_status_of_your_phone"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/dot_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/dot_img"
        android:layout_width="0dp"
        android:layout_height="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_dot_the_first"
        app:layout_constraintBottom_toTopOf="@id/resume_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resume_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_not_transparent_button_blue"
        android:text="@string/resume"
        android:textAllCaps="false"
        android:textAppearance="@style/Text.Header_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>